[update] CMakeLists.txt

--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -1,9 +1,8 @@
 find_package(F2PY REQUIRED)
 find_package(Python 3.8 REQUIRED COMPONENTS NumPy)
 find_package(OpenMP REQUIRED)
-
-set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 # Grab the variables from a local Python installation
 # NumPy headers
@@ -25,9 +24,7 @@ set (initpy "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py")
 set (f2cmap "${CMAKE_CURRENT_SOURCE_DIR}/.f2py_f2cmap")
 set (sofile "${CMAKE_CURRENT_BINARY_DIR}/symrmsd.${Python_SOABI}.so")
 
-add_custom_target( symrmsd ALL
-    DEPENDS ${sofile}
-)
+add_custom_target( symrmsd ALL DEPENDS ${sofile} )
 
 include_directories(${PYTHON_INCLUDE_DIR})
 include_directories(${NumPy_INCLUDE_DIRS})
@@ -80,3 +77,22 @@ add_custom_command(
 install( FILES ${sofile} DESTINATION symrmsd )
 install( FILES ${initpy} DESTINATION symrmsd )
 
+if( CMAKE_BUILD_TYPE MATCHES "Debug" )
+  find_package(unittest REQUIRED)
+  find_package(purelapack REQUIRED)
+  find_package(BLAS REQUIRED)
+  add_compile_options(${BLAS_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS})
+
+  add_executable(test_driver)
+  target_sources( test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/test_driver.f90)
+  target_include_directories(test_driver PRIVATE ${unittest_DIR}/mod_files)
+  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../symRMSD)
+  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../symRMSD/include )
+  target_include_directories(test_driver PRIVATE ${OpenMP_Fortran_INCLUDE_DIRS} )
+  target_link_libraries(test_driver PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
+  target_link_libraries(test_driver PRIVATE symRMSD )
+  target_link_libraries(test_driver PRIVATE unittest )
+  target_link_libraries(test_driver PRIVATE purelapack )
+  add_test( NAME test_driver COMMAND test_driver )
+endif()
