--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_mol_symmetry.f90 )
@@ -21,27 +20,28 @@ add_library(symRMSD STATIC)
 set_target_properties(symRMSD PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${LIB_MOD_DIR}>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_MODULEDIR}>
-  )
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_MODULEDIR}>)
 
 target_sources(symRMSD PRIVATE ${f90_src})
 target_include_directories(symRMSD PRIVATE include)
 target_link_libraries(symRMSD PUBLIC blas)
 
-install(TARGETS symRMSD
-  EXPORT symRMSD-export
-  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
-  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
-  )
+install(TARGETS ${PROJECT_NAME}
+        EXPORT ${PROJECT_NAME}-export
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}/lib"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}/lib")
+
+install(EXPORT ${PROJECT_NAME}-export
+        NAMESPACE ${PROJECT_NAME}::
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}")
 
 install(DIRECTORY ${LIB_MOD_DIR}
-  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/symRMSD"
-  )
+  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}")
 
-install(EXPORT symRMSD-export
-  FILE symRMSD-config.cmake
-  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/symRMSD")
+install(EXPORT ${PROJECT_NAME}-export
+  FILE ${PROJECT_NAME}-config.cmake
+  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}")
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
-  add_subdirectory( test )
+  add_subdirectory(test)
 endif()
