--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -42,10 +42,10 @@ add_custom_command(
       $<$<CONFIG:Debug>:--debug-capi>
       --f2cmap ${f2cmap}
       "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
-      -I${CMAKE_CURRENT_BINARY_DIR}/../symRMSD
+      -I${CMAKE_CURRENT_BINARY_DIR}/../symRMSD/mod_files
       -L${CMAKE_CURRENT_BINARY_DIR}/../symRMSD
       -lsymRMSD
-      -lblas
+      ${BLAS_LIBRARIES}
       ${lomp}
       --opt=-O2
       --f90flags='
@@ -79,20 +79,17 @@ install( FILES ${initpy} DESTINATION symrmsd )
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   find_package(unittest REQUIRED)
-  find_package(purelapack REQUIRED)
-  find_package(BLAS REQUIRED)
   add_compile_options(${BLAS_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS})
 
   add_executable(test_driver)
-  target_sources( test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/test_driver.f90)
+  target_sources(test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/test_driver.f90)
   target_include_directories(test_driver PRIVATE ${unittest_DIR}/mod_files)
-  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../symRMSD)
-  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../symRMSD/include )
+  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../symRMSD/mod_files)
+  #target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../symRMSD/include )
   target_include_directories(test_driver PRIVATE ${OpenMP_Fortran_INCLUDE_DIRS} )
   target_link_libraries(test_driver PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
-  target_link_libraries(test_driver PRIVATE symRMSD )
-  target_link_libraries(test_driver PRIVATE unittest )
-  target_link_libraries(test_driver PRIVATE purelapack )
+  target_link_libraries(test_driver PRIVATE symRMSD_shared)
+  target_link_libraries(test_driver PRIVATE unittest)
   add_test( NAME test_driver COMMAND test_driver )
 endif()
