[update] rename mod_branch_and_prune.f90 -> mod_branch_and_bound.f90

--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -7,7 +7,7 @@ list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_d_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
-list( APPEND f90_src mod_branch_and_prune.f90 )
+list( APPEND f90_src mod_branch_and_bound.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
 
 set(LIB_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/mod_files)
