--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -62,9 +62,9 @@ target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
 target_link_libraries( test_tree PRIVATE unittest )
 add_test( NAME test_tree COMMAND test_tree )
 
-add_executable( test_branch_and_prune )
-target_include_directories( test_branch_and_prune PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+add_executable( test_branch_and_bound )
+target_include_directories( test_branch_and_bound PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_branch_and_bound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -73,12 +73,12 @@ target_sources( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_prune.f90
-                                  test_branch_and_prune.f90 )
-target_include_directories( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_branch_and_prune PRIVATE unittest )
-target_link_libraries( test_branch_and_prune PRIVATE purelapack )
-add_test( NAME test_branch_and_prune COMMAND test_branch_and_prune )
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
+                                  test_branch_and_bound.f90 )
+target_include_directories( test_branch_and_bound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_branch_and_bound PRIVATE unittest )
+target_link_libraries( test_branch_and_bound PRIVATE purelapack )
+add_test( NAME test_branch_and_bound COMMAND test_branch_and_bound )
 
 add_executable( test_symRMSD )
 target_include_directories( test_symRMSD PRIVATE ${unittest_DIR}/mod_files )
@@ -91,7 +91,7 @@ target_sources( test_symRMSD PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
-                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_prune.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_symRMSD.f90
                                      test_symRMSD.f90 )
 target_include_directories( test_symRMSD PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
