--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -46,6 +46,21 @@ target_link_libraries( test_estimate_rotation_matrix PRIVATE unittest )
 target_link_libraries( test_estimate_rotation_matrix PRIVATE purelapack )
 add_test( NAME test_estimate_rotation_matrix COMMAND test_estimate_rotation_matrix )
 
+add_executable( test_c_matrix )
+target_include_directories( test_c_matrix PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_c_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
+                                      test_c_matrix.f90 )
+target_include_directories( test_c_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_c_matrix PRIVATE unittest )
+target_link_libraries( test_c_matrix PRIVATE purelapack )
+add_test( NAME test_c_matrix COMMAND test_c_matrix )
+
 add_executable( test_d_matrix )
 target_include_directories( test_d_matrix PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
