[update] mod_d_matrix.f90

--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -71,6 +71,7 @@ target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
                                       mod_testutil.f90
                                       test_d_matrix.f90 )
