--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -35,22 +35,22 @@ target_link_libraries( test_det PRIVATE unittest )
 target_link_libraries( test_det PRIVATE purelapack )
 add_test( NAME test_det COMMAND test_det )
 
-add_executable( test_estimate_rotation_matrix )
-target_include_directories( test_estimate_rotation_matrix PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_estimate_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+add_executable( test_rotation_matrix )
+target_include_directories( test_rotation_matrix PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
-                                    test_estimate_rotation_matrix.f90 )
-target_include_directories( test_estimate_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_estimate_rotation_matrix PRIVATE unittest )
-target_link_libraries( test_estimate_rotation_matrix PRIVATE purelapack )
-add_test( NAME test_estimate_rotation_matrix COMMAND test_estimate_rotation_matrix )
+                                    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
+                                    test_rotation_matrix.f90 )
+target_include_directories( test_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_rotation_matrix PRIVATE unittest )
+target_link_libraries( test_rotation_matrix PRIVATE purelapack )
+add_test( NAME test_rotation_matrix COMMAND test_rotation_matrix )
 
 add_executable( test_c_matrix )
 target_include_directories( test_c_matrix PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_c_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
@@ -66,7 +66,7 @@ add_executable( test_d_matrix )
 target_include_directories( test_d_matrix PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
@@ -92,11 +92,12 @@ add_executable( test_branch_and_bound )
 target_include_directories( test_branch_and_bound PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_branch_and_bound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
@@ -110,11 +111,12 @@ add_executable( test_symRMSD )
 target_include_directories( test_symRMSD PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_symRMSD PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
