[update] mod_s_matrix

--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -5,7 +5,8 @@ list( APPEND f90_src mod_det.f90 )
 list( APPEND f90_src mod_rotation_matrix.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
-list( APPEND f90_src mod_d_matrix.f90 )
+list( APPEND f90_src mod_c_matrix.f90 )
+list( APPEND f90_src mod_s_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
 list( APPEND f90_src mod_branch_and_bound.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
