--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -35,6 +35,15 @@ target_link_libraries( test_det PRIVATE unittest )
 target_link_libraries( test_det PRIVATE purelapack )
 add_test( NAME test_det COMMAND test_det )
 
+add_executable( test_tree )
+target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
+                                  test_tree.f90 )
+target_include_directories( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_tree PRIVATE unittest )
+add_test( NAME test_tree COMMAND test_tree )
+
 add_executable( test_rotation_matrix )
 target_include_directories( test_rotation_matrix PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
@@ -46,6 +55,21 @@ target_include_directories( test_rotation_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_
 target_link_libraries( test_rotation_matrix PRIVATE unittest )
 target_link_libraries( test_rotation_matrix PRIVATE purelapack )
 add_test( NAME test_rotation_matrix COMMAND test_rotation_matrix )
+
+add_executable( test_lowerbound )
+target_include_directories( test_lowerbound PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lowerbound.f90
+                                        mod_testutil.f90
+                                        test_lowerbound.f90 )
+target_include_directories( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_lowerbound PRIVATE unittest )
+target_link_libraries( test_lowerbound PRIVATE purelapack )
+add_test( NAME test_lowerbound COMMAND test_lowerbound )
 
 add_executable( test_c_matrix )
 target_include_directories( test_c_matrix PRIVATE ${unittest_DIR}/mod_files )
@@ -81,9 +105,9 @@ target_link_libraries( test_s_matrix PRIVATE unittest )
 target_link_libraries( test_s_matrix PRIVATE purelapack )
 add_test( NAME test_s_matrix COMMAND test_s_matrix )
 
-add_executable( test_lowerbound )
-target_include_directories( test_lowerbound PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+add_executable( test_lb_manager )
+target_include_directories( test_lb_manager PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_lb_manager PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -93,20 +117,13 @@ target_sources( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_param
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_s_matrix.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lowerbound.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lb_manager.f90
                                         mod_testutil.f90
-                                        test_lowerbound.f90 )
-target_include_directories( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_lowerbound PRIVATE unittest )
-target_link_libraries( test_lowerbound PRIVATE purelapack )
-add_test( NAME test_lowerbound COMMAND test_lowerbound )
-
-add_executable( test_tree )
-target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
-                                  test_tree.f90 )
-target_link_libraries( test_tree PRIVATE unittest )
-add_test( NAME test_tree COMMAND test_tree )
+                                        test_lb_manager.f90 )
+target_include_directories( test_lb_manager PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_lb_manager PRIVATE unittest )
+target_link_libraries( test_lb_manager PRIVATE purelapack )
+add_test( NAME test_lb_manager COMMAND test_lb_manager )
 
 add_executable( test_branch_and_bound )
 target_include_directories( test_branch_and_bound PRIVATE ${unittest_DIR}/mod_files )
