--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -38,6 +38,7 @@ add_test( NAME test_det COMMAND test_det )
 add_executable( test_tree )
 target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                   test_tree.f90 )
 target_include_directories( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
@@ -87,9 +88,9 @@ target_link_libraries( test_c_matrix PRIVATE unittest )
 target_link_libraries( test_c_matrix PRIVATE purelapack )
 add_test( NAME test_c_matrix COMMAND test_c_matrix )
 
-add_executable( test_s_matrix )
-target_include_directories( test_s_matrix PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_s_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+add_executable( test_f_matrix )
+target_include_directories( test_f_matrix PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_f_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -97,13 +98,13 @@ target_sources( test_s_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_s_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
                                       mod_testutil.f90
-                                      test_s_matrix.f90 )
-target_include_directories( test_s_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_s_matrix PRIVATE unittest )
-target_link_libraries( test_s_matrix PRIVATE purelapack )
-add_test( NAME test_s_matrix COMMAND test_s_matrix )
+                                      test_f_matrix.f90 )
+target_include_directories( test_f_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_f_matrix PRIVATE unittest )
+target_link_libraries( test_f_matrix PRIVATE purelapack )
+add_test( NAME test_f_matrix COMMAND test_f_matrix )
 
 add_executable( test_bb_manager )
 target_include_directories( test_bb_manager PRIVATE ${unittest_DIR}/mod_files )
@@ -116,7 +117,7 @@ target_sources( test_bb_manager PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_param
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
-                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_s_matrix.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lowerbound.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_manager.f90
                                         mod_testutil.f90
@@ -136,7 +137,7 @@ target_sources( test_branch_and_bound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_s_matrix.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
                                   test_branch_and_bound.f90 )
@@ -155,7 +156,7 @@ target_sources( test_symRMSD PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
-                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_s_matrix.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_bound.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_symRMSD.f90
