--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -43,6 +43,7 @@ add_test( NAME test_det COMMAND test_det )
 add_executable( test_tree )
 target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                   test_tree.f90 )
@@ -67,6 +68,7 @@ target_include_directories( test_lowerbound PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_lowerbound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation_matrix.f90
+                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                         ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lowerbound.f90
