--- a/src/mobbrmsd/test/CMakeLists.txt
+++ b/src/mobbrmsd/test/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package( purelapack REQUIRED )
 add_executable( test_group_permutation )
 target_include_directories( test_group_permutation PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_group_permutation PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
   test_group_permutation.f90 )
@@ -13,7 +14,8 @@ add_test( NAME test_group_permutation COMMAND test_group_permutation )
 
 add_executable( test_Hungarian )
 target_include_directories( test_Hungarian PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_Hungarian PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_Hungarian PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                        test_Hungarian.f90 )
 target_include_directories( test_Hungarian PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
@@ -22,7 +24,8 @@ add_test( NAME test_Hungarian COMMAND test_Hungarian )
 
 add_executable( test_mol_block )
 target_include_directories( test_mol_block PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_mol_block PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_mol_block PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                        ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                        test_mol_block.f90 )
@@ -32,7 +35,8 @@ add_test( NAME test_mol_block COMMAND test_mol_block )
 
 add_executable( test_det )
 target_include_directories( test_det PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_det PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_det PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                 ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                  test_det.f90 )
 target_include_directories( test_det PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
@@ -42,7 +46,8 @@ add_test( NAME test_det COMMAND test_det )
 
 add_executable( test_tree )
 target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
@@ -53,11 +58,12 @@ add_test( NAME test_tree COMMAND test_tree )
 
 add_executable( test_rotation )
 target_include_directories( test_rotation PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_rotation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
-                                    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
-                                    mod_testutil.f90
-                                    test_rotation.f90 )
+target_sources( test_rotation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
+                                      mod_testutil.f90
+                                      test_rotation.f90 )
 target_include_directories( test_rotation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_rotation PRIVATE unittest )
 target_link_libraries( test_rotation PRIVATE purelapack )
@@ -65,7 +71,8 @@ add_test( NAME test_rotation COMMAND test_rotation )
 
 add_executable( test_c_matrix )
 target_include_directories( test_c_matrix PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_c_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_c_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -80,7 +87,8 @@ add_test( NAME test_c_matrix COMMAND test_c_matrix )
 
 add_executable( test_f_matrix )
 target_include_directories( test_f_matrix PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_f_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_f_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -97,7 +105,8 @@ add_test( NAME test_f_matrix COMMAND test_f_matrix )
 
 add_executable( test_bb_block )
 target_include_directories( test_bb_block PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_bb_block PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_bb_block PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -116,27 +125,8 @@ add_test( NAME test_bb_block COMMAND test_bb_block )
 
 add_executable( test_bb_list )
 target_include_directories( test_bb_list PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_bb_list PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
-                                  mod_testutil.f90
-                                  test_bb_list.f90 )
-target_include_directories( test_bb_list PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_bb_list PRIVATE unittest )
-target_link_libraries( test_bb_list PRIVATE purelapack )
-add_test( NAME test_bb_list COMMAND test_bb_list )
-
-add_executable( test_mobbrmsd )
-target_include_directories( test_mobbrmsd PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+target_sources( test_bb_list PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -147,9 +137,30 @@ target_sources( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
-                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
                                      mod_testutil.f90
-                                     test_mobbrmsd.f90 )
+                                     test_bb_list.f90 )
+target_include_directories( test_bb_list PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_bb_list PRIVATE unittest )
+target_link_libraries( test_bb_list PRIVATE purelapack )
+add_test( NAME test_bb_list COMMAND test_bb_list )
+
+add_executable( test_mobbrmsd )
+target_include_directories( test_mobbrmsd PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rotation.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_c_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_f_matrix.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_block.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_bb_list.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
+                                      mod_testutil.f90
+                                      test_mobbrmsd.f90 )
 target_include_directories( test_mobbrmsd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_mobbrmsd PRIVATE unittest )
 target_link_libraries( test_mobbrmsd PRIVATE purelapack )
